--- a/src/components/Cart/Checkout/Checkout.module.css
+++ b/src/components/Cart/Checkout/Checkout.module.css
@@ -14,6 +14,12 @@
   display: block;
 }
 
+.control p {
+  color: tomato;
+  font-size: 14px;
+  margin-top: 5px;
+}
+
 .control input {
   font: inherit;
   border: 1px solid #ccc;
